--- a/themes/hugo-calade/exampleSite/config.toml
+++ b/themes/hugo-calade/exampleSite/config.toml
@@ -49,8 +49,8 @@ theme = "calade"
     url = "/strategicplan/"
     weight = 2
 [[menu.main]]
-    name = "Posts"
-    url = "/post/"
+    name = "Newsletter"
+    url = "/newsletter/"
     weight = 3
 [[menu.main]]
     name = "Projects"
