Changed Twitter image in config.toml

--- a/themes/hugo-calade/exampleSite/config.toml
+++ b/themes/hugo-calade/exampleSite/config.toml
@@ -81,7 +81,7 @@ theme = "calade"
     siteProfile = "header/profile.png"
     description = "The public website for the EMCR Brain Sciences Network"
     footer = "A footer of one's own"
-    twitterImage = "https://djnavarro.github.io/hugo-calade/header/caladown.png"
+    twitterImage = "header/EMCR-BSN-logo.jpeg"
     colorPage = "#333333"    # background colour
     colorText = "#dddddd"    # main text colour
     colorFade = "#888888"    # faded text colour
