--- a/config.yaml
+++ b/config.yaml
@@ -20,9 +20,12 @@ menu:
     - name: Profiles
       url: /profiles/
       weight: 4
+    - name: Steering Committee
+      url: /steeringcommittee/
+      weight: 5
     - name: Tags
       url: /tags/
-      weight: 5
+      weight: 6
 params:
   colorAccent1: '#ff69b4'
   colorAccent2: '#ba68c8'
